<resources>
    <string name="app_name">Bike Curious</string>
    <string name="login_button">Satisfy my Curiosity</string>
    <string name="disconnected">Disconnected\t</string>
    <string name="connecting">Connecting...</string>
    <string name="button_bluetooth_unlock">unlock</string>
    <string name="sample_unique_ID">10:C3:7B:93:40:BC</string>
    <string name="light_mode">Mode\t\t</string>
    <string name="light_state">State\t\t</string>
    <string name="riding_history">History</string>
    <string name="status">Status:\t</string>
    <string name="modeAuto">Auto</string>
    <string name="modeOn">On</string>
    <string name="stateSolid">Solid</string>
    <string name="stateBlinking">Blinking</string>
    <string name="unlockmsg">Enter Bike to unlock:</string>
    <string name="unlockquestion">Unlock?</string>
    <string name="accept">accept</string>
    <string name="connected">Connected:\t</string>
    <string name="unlocked">\tUnlocked</string>
    <string name="locked">\tLocked</string>
    <string name="cancel">cancel</string>
    <string name="login_screen_text">Everyone gets a little Bike Curious now and then</string>
    <string name="button_add_ride">Add Ride</string>
    <string name="textView_no_rides">No Rides Logged</string>
    <string name="new_ride_empty_location">New Ride</string>

    <string name="hint_login_username"><i>Username</i></string>
    <string name="hint_login_password"><i>Password</i></string>
    <string name="hint_bikeaddr"><i>Bike Address</i></string>
    <string name="hint_ride_name"><i>new ride</i></string>

    <string name="toast_add_ride_empty">Consider entering a unique name</string>
    <string name="toast_failedlogin">Username or Password Incorrect</string>
    <string name="toast_addr_empty">No Address Entered</string>
    <string name="toast_addr_entered">Entered: </string>
    <string name="register_new_user">Register</string>
    <string name="dialog_register_new_user">Enter a username and password</string>
    <string name="hint_register_username">Enter a Username</string>
    <string name="hint_register_password">Enter a Password</string>
    <string name="hint_register_confirm_password">Re-enter Password</string>

    <string name="toast_password_mismatch">Passwords don\'t match</string>
    <string name="toast_username_taken">Username already taken</string>
    <string name="empty"></string>
    <string name="logout">logout</string>
    <string name="delete">delete</string>

    <string name="ble_not_supported">BLE NOT SUPPORTED</string>
    <string name="error_bluetooth_not_supported">bluetooth not supported</string>
    <string name="button_bluetooth_lock">Lock</string>
    <string name="register_dialog_title">Enter your email address and password</string>
    <string name="website">https://shining-heat-649.firebaseio.com/</string>
    <string name="moving_status_moving">Moving</string>
    <string name="moving_status_stationary">Stationary</string>


</resources>
