<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/dark"
    tools:context="xyz.efritz.bikecurious.Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/login_screen_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView"
        android:textColor="@color/grey"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <EditText
        android:text="t"
        android:id="@+id/username_text"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/hint_login_username"
        android:layout_below="@id/textView"
        android:textColor="@color/green"
        android:textColorHint="@color/grey"
        android:backgroundTint="@color/lessdark"
        android:background="@color/lessdark"
        android:layout_marginTop="50dp"
        android:layout_alignEnd="@+id/password_text"
        android:layout_alignRight="@id/password_text"
        android:layout_alignStart="@id/password_text"
        android:layout_alignLeft="@id/password_text"/>

    <EditText
        android:text="p"
        android:id="@id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/hint_login_password"
        android:layout_below="@id/username_text"
        android:layout_marginTop="10dp"
        android:textColor="@color/green"
        android:textColorHint="@color/grey"
        android:backgroundTint="@color/lessdark"
        android:background="@color/lessdark"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/login_button"
        android:id="@+id/button"
        android:background="@drawable/button_rounded_corners"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="login_press" />

    <Button
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:text="@string/register_new_user"
        android:id="@+id/button_register"
        android:background="@drawable/button_rounded_corners"
        android:onClick="register_press"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

</RelativeLayout>
