<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/dark"
    tools:context="xyz.efritz.bikecurious.ControlScreen">

    <Button
        android:id="@+id/lock_button"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/button_bluetooth_unlock"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:background="@drawable/button_rounded_corners"
        android:layout_marginBottom="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="unlock" />

    <TextView
        android:id="@+id/state_of_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/disconnected"
        android:textColor="@color/grey"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/unique_identifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:textColor="@color/grey"
        android:layout_alignTop="@id/state_of_connection"
        android:layout_toEndOf="@id/state_of_connection"
        android:layout_toRightOf="@id/state_of_connection"/>

    <Switch
        android:id="@+id/lightMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:thumbTint="@color/green"
        android:trackTint="@color/darkgreen"
        android:clickable="false"
        android:layout_marginTop="54dp"
        android:layout_below="@id/unique_identifier"
        android:layout_toEndOf="@+id/mode_title"
        android:layout_toRightOf="@+id/mode_title"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp" />

    <Switch
        android:id="@+id/lightState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:thumbTint="@color/green"
        android:trackTint="@color/darkgreen"
        android:clickable="false"
        android:layout_alignTop="@+id/state_title"
        android:layout_alignStart="@+id/lightMode"
        android:layout_alignLeft="@id/lightMode"/>

    <Button
        android:id="@+id/riding_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/riding_history"
        android:layout_below="@id/lightState"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:onClick="rider_history" />

    <TextView
        android:id="@+id/mode_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Auto"
        android:textColor="@color/lessdark"
        android:layout_alignTop="@id/lightMode"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/state_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Solid"
        android:textColor="@color/lessdark"
        android:layout_alignBottom="@id/lightState"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/mode_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/light_mode"
        android:textColor="@color/lessdark"
        android:layout_alignTop="@id/lightMode"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@id/state_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/light_state"
        android:textColor="@color/lessdark"
        android:layout_below="@id/lightMode"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/lock_status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/status"
        android:textColor="@color/grey"
        android:layout_below="@id/state_of_connection"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/lock_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/locked"
        android:textColor="@color/grey"
        android:layout_alignTop="@id/lock_status_label"
        android:layout_toEndOf="@id/lock_status_label"
        android:layout_toRightOf="@id/lock_status_label"/>

    <com.gc.materialdesign.views.ButtonFlat
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#1E88E5"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:onClick="click_logout"
        android:text="@string/logout" />



</RelativeLayout>
